--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
         -->
 
         <!-- Your Image Here -->
-        <img src="images/littlelink.svg" class="avatar" srcset="images/littlelink.svg 2x" alt="">
+        <img src="images/meinsphere.JPG" class="avatar" srcset="images/meinsphere.JPG 2x" alt="">
 
         <!-- Title -->
-        <h1 role="heading">LittleLink</h1>
+        <h1 role="heading">Tommy Hasselman</h1>
 
         <!-- Short Bio -->
-        <p>An open source DIY Linktree alternative.</p>
+        <p>I am a New Zealand based software developer and hobbyist maker.</p>
 
         <!--
 
